<resources>
    <string name="app_name">Leroy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Главная</string>
    <string name="list">Мой список</string>
    <string name="shop">Магазины</string>
    <string name="profile">Профиль</string>
    <string name="basket">Корзина</string>
    <string name="search_goods">Поиск товаров</string>
    <string name="best_prices">Лучшая цена</string>
    <string name="limited_offer">Предложение ограничено</string>
    <string name="catalog">Каталог</string>
</resources>