<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_search"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_list"
        android:title="@string/list" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/shop" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_basket"
        android:title="@string/basket" />

</menu>