<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zhuravlev.leroy.ui.home.HomeFragment"
        android:label="@string/home">
        <action
            android:id="@+id/action_to_tile"
            app:destination="@id/navigation_tile"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.zhuravlev.leroy.ui.example.ExampleFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_example" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.zhuravlev.leroy.ui.example.ExampleFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_example" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.zhuravlev.leroy.ui.example.ExampleFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_example" />

    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.zhuravlev.leroy.ui.example.ExampleFragment"
        android:label="@string/basket"
        tools:layout="@layout/fragment_example" />
    <fragment
        android:id="@+id/navigation_tile"
        android:name="com.zhuravlev.leroy.ui.tile.TileFragment"
        android:label="@string/catalog"
        tools:layout="@layout/fragment_catalogs" />
</navigation>